--- a/app-done/res/layout/player_activity.xml
+++ b/app-done/res/layout/player_activity.xml
@@ -14,8 +14,9 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<RelativeLayout
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -188,3 +189,4 @@
             class="com.google.android.gms.cast.framework.media.widget.MiniControllerFragment"/>
 
 </RelativeLayout>
+</layout>
