--- a/app-done/res/layout/player_activity.xml
+++ b/app-done/res/layout/player_activity.xml
@@ -46,7 +46,7 @@
                 android:visibility="gone"/>
 
         <ImageButton
-                android:id="@+id/play_circle"
+                android:id="@+id/playCircle"
                 android:src="@drawable/ic_play_circle_white_80dp"
                 android:layout_centerInParent="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
@@ -146,7 +146,7 @@
         />
 
     <TextView
-            android:id="@+id/subtitle"
+            android:id="@+id/author"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/title"
@@ -163,7 +163,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/title"
             android:layout_alignRight="@+id/title"
-            android:layout_below="@+id/subtitle"
+            android:layout_below="@+id/author"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-light"
