Use lambda where possible

--- a/app-done/res/layout/player_activity.xml
+++ b/app-done/res/layout/player_activity.xml
@@ -51,7 +51,9 @@
                 android:layout_centerInParent="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:onClick="togglePlayback"
+            />
 
     </RelativeLayout>
 
